# Glitter

./: CMakeLists.txt
Glitter/Headers/: glitter.hpp
Glitter/Sources/: main.cpp  opencl.cpp
